--- a/_layouts/writeup.html
+++ b/_layouts/writeup.html
@@ -14,7 +14,7 @@
     <style>
         /* --- GLOBAL VARIABLES --- */
         :root {
-            --bg-page: #0d1117;       
+            --bg-page: #050a14;
             --text-main: #c9d1d9;     
             --border-color: #30363d;  
             --accent-color: #00ff41;  
